--- a/src/Pages/Home/Blogs/Blogs.css
+++ b/src/Pages/Home/Blogs/Blogs.css
@@ -1,6 +1,23 @@
+.blogs-title {
+  text-align: center;
+  color: blue;
+}
+
 .blogs-container {
   display: grid;
-  color: blanchedalmond;
-  background-color: black;
   grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+/* Responsive part */
+@media only screen and (max-width: 576px) {
+  .blogs-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 992px) {
+  .blogs-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
