--- a/src/Pages/Home/Blog/Blog.css
+++ b/src/Pages/Home/Blog/Blog.css
@@ -1,11 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap");
 .blog-img {
   height: 350px;
-  width: 350px;
+  width: 400px;
   border-radius: 8px;
 }
 .blog-description {
-  border: 1px solid lightblue;
+  border: 1px solid lightgray;
   border-radius: 10px;
   padding-bottom: 10px;
   text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.blog {
+  /* margin-bottom: -6px; */
+  padding-top: 20px;
+}
+p.blog-des {
+  margin-top: 20px;
 }
