--- a/src/Pages/Home/Blogs/Blogs.css
+++ b/src/Pages/Home/Blogs/Blogs.css
@@ -1,6 +1,10 @@
+/* Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Lobster+Two:ital@1&display=swap");
 .blogs-title {
   text-align: center;
-  color: blue;
+  color: #37a4ae;
+  font-weight: 500;
+  font-family: "Lobster";
 }
 
 .blogs-container {
